--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         ENTIRE APARTMENT · CITTÀ DELLA PIEVE
                     </p>
                     <p class="where">
-                        Airstream 'Glamping' in Andalucia!
+                        Joshua Tree Homesteader Cabin
                     </p>
                     <p class="cost about-place">
                         ₹ 2,254 / night
